Update TestUtfLen.java
update regression test